another weather temp fix

--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -479,6 +479,9 @@
       <div class="card">
         <div class="card-header">
           <h2 class="card-title">Weather API Data</h2>
+          <p style="color: #6B7280; font-size: 14px; margin-top: 5px;">
+            Shows data pulled from WeatherAPI.com - "Fetched At" is when we pulled from the weather API
+          </p>
           <button class="btn btn-secondary" onclick="loadWeatherData()">↻ Refresh</button>
         </div>
         
@@ -493,7 +496,7 @@
               <th>Weather Condition</th>
               <th>Cloud Cover</th>
               <th>Humidity</th>
-              <th>Fetched At</th>
+              <th>Pulled from API At</th>
             </tr>
           </thead>
           <tbody>
