updated weather data

--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -494,7 +494,8 @@
             <tr>
               <th>Location</th>
               <th>Condition Level</th>
-              <th>Temperature</th>
+              <th>Temp (°C)</th>
+              <th>Temp (°F)</th>
               <th>Wind Speed</th>
               <th>Wind Direction</th>
               <th>Weather Condition</th>
@@ -506,7 +507,7 @@
           </thead>
           <tbody>
             <tr>
-              <td colspan="10" class="loading">Loading weather data...</td>
+              <td colspan="11" class="loading">Loading weather data...</td>
             </tr>
           </tbody>
         </table>
